--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,5 @@ grpcio==1.53.0
 openai==0.27.2
 protobuf==4.22.1
 PyAudio==0.2.13
+pyttsx3==2.90
 requests==2.28.2
-selenium==4.8.3
-webdriver_manager==3.8.5
