--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-grpc==1.0.0
-grpcio==1.53.0
-openai==0.27.2
-protobuf==4.22.1
-PyAudio==0.2.13
-pyttsx3==2.90
-requests==2.28.2
+grpcio
+openai
+protobuf
+PyAudio
+pyttsx3
+requests
